[gd_scene load_steps=34 format=2]

[ext_resource path="res://aiden/sprites/idle/aiden-idle0003.png" type="Texture" id=1]
[ext_resource path="res://aiden/sprites/poof/aiden-poof0000.png" type="Texture" id=2]
[ext_resource path="res://aiden/sprites/idle/aiden-idle0000.png" type="Texture" id=3]
[ext_resource path="res://aiden/sprites/poof/aiden-poof0004.png" type="Texture" id=4]
[ext_resource path="res://aiden/sprites/poof/aiden-poof0003.png" type="Texture" id=5]
[ext_resource path="res://aiden/sprites/idle/aiden-idle0001.png" type="Texture" id=6]
[ext_resource path="res://aiden/sprites/poof/aiden-poof0002.png" type="Texture" id=7]
[ext_resource path="res://aiden/sprites/poof/aiden-poof0001.png" type="Texture" id=8]
[ext_resource path="res://aiden/sprites/idle/aiden-idle0002.png" type="Texture" id=9]
[ext_resource path="res://aiden/sprites/needle-charging-air/aiden-needle-charging-air0001.png" type="Texture" id=10]
[ext_resource path="res://aiden/sprites/needle-charging-air/aiden-needle-charging-air0002.png" type="Texture" id=11]
[ext_resource path="res://aiden/sprites/needle-throw/aiden-needle-throw0002.png" type="Texture" id=12]
[ext_resource path="res://aiden/sprites/needle-throw-air/aiden-needle-throw-air0002.png" type="Texture" id=13]
[ext_resource path="res://aiden/sprites/needle-throw-air/aiden-needle-throw-air0003.png" type="Texture" id=14]
[ext_resource path="res://aiden/sprites/needle-charging-air/aiden-needle-charging-air0003.png" type="Texture" id=15]
[ext_resource path="res://aiden/sprites/needle-throw/aiden-needle-throw0001.png" type="Texture" id=16]
[ext_resource path="res://aiden/sprites/needle-charging/aiden-needle-charging0002.png" type="Texture" id=17]
[ext_resource path="res://aiden/sprites/needle-charging/aiden-needle-charging0000.png" type="Texture" id=18]
[ext_resource path="res://aiden/sprites/needle-charging/aiden-needle-charging0003.png" type="Texture" id=19]
[ext_resource path="res://aiden/sprites/needle-throw/aiden-needle-throw0000.png" type="Texture" id=20]
[ext_resource path="res://aiden/sprites/needle-throw/aiden-needle-throw0003.png" type="Texture" id=21]
[ext_resource path="res://aiden/sprites/needle-charging/aiden-needle-charging0001.png" type="Texture" id=22]
[ext_resource path="res://aiden/sprites/needle-charging-air/aiden-needle-charging-air0000.png" type="Texture" id=23]
[ext_resource path="res://slime/slime.gd" type="Script" id=27]
[ext_resource path="res://particles/fire.png" type="Texture" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 22 ), ExtResource( 17 ), ExtResource( 19 ) ],
"loop": false,
"name": "needle_charge",
"speed": 10.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 15 ) ],
"loop": false,
"name": "needle_charge_air",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 21 ) ],
"loop": false,
"name": "needle_throw",
"speed": 10.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "needle_throw_air",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "needle_throw_air_windup",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 16 ) ],
"loop": true,
"name": "needle_throw_windup",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": false,
"name": "poof",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": false,
"name": "poof_windup",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="Curve" id=4]
min_value = -10.0
max_value = 10.0
_data = [ Vector2( 0, -9 ), 0.0, 0.0, 0, 0, Vector2( 1, 8.81818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 53.7
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 235.49
initial_velocity_random = 0.23
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
angle_curve = SubResource( 5 )
scale = 0.5
scale_random = 0.5
scale_curve = SubResource( 7 )

[node name="aiden" type="KinematicBody2D"]
collision_layer = 256
collision_mask = 256
script = ExtResource( 27 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.503495, 0.485587 )
frames = SubResource( 1 )
animation = "needle_throw_air_windup"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 5, 9 )
shape = SubResource( 2 )

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="WindupTimer" type="Timer" parent="."]

[node name="FloorCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 256

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="FireParticles" type="Particles2D" parent="."]
material = SubResource( 3 )
emitting = false
amount = 32
speed_scale = 1.5
process_material = SubResource( 8 )
texture = ExtResource( 28 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_ActionTimer_timeout"]
[connection signal="timeout" from="WindupTimer" to="." method="_on_WindupTimer_timeout"]
