[gd_scene load_steps=7 format=2]

[ext_resource path="res://player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://slime/slime.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/icon.png-487276ed1e3a0c39cad0279d744ee560.stex"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 13.625 )

[node name="Node2D" type="Node2D"]

[node name="player" parent="." instance=ExtResource( 1 )]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -3, 101 )
scale = Vector2( 50, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
scale = Vector2( 3.2, 3 )
shape = SubResource( 1 )

[node name="enemy1" type="KinematicBody2D" parent="."]
position = Vector2( 200, 0 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="enemy1"]
texture = SubResource( 3 )

[node name="IdleCollisionBox" type="CollisionShape2D" parent="enemy1"]
scale = Vector2( 4, 4 )
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="enemy1"]
collision_layer = 256
collision_mask = 256

[node name="IdleCollisionBox" type="CollisionShape2D" parent="enemy1/HurtBox"]
position = Vector2( 0, 14.5 )
scale = Vector2( 4, 4 )
shape = SubResource( 2 )
